# pythia2

./: .gitignore  LICENSE  README.md  bad_entry_filter.py  claude.md  paper_trade_visualizer.py  paper_trades.py  pyproject.toml  requirements.txt  requirements_rl.txt  run_filtered_backtest.py  run_production_backtest.py  strategies.md  strategy_dashboard.py
config/: .env.example  config.yaml  mac_mini.env.example  model_config.yaml
docs/: BREAKOUT_DETECTION_STRATEGIES.md  RL_IMPROVEMENTS.md  RL_TRADING_ARCHITECTURE.md  RL_TRAINING_V1_RESULTS.md  RL_TRAINING_V2_RESULTS.md  RL_V4_PLAN.md  RL_V5_PROPOSAL.md  SPIKE_STRATEGY_ANALYSIS.md  catalyst_spike_prediction.md  generate_charts.py  rl_iteration2_results.md
models/: event_classifier_metrics.json
notebooks/: combined_signal_analysis.py  combined_signal_analysis_24h.py  trade_microstructure_analysis.py  whale_price_correlation.ipynb
scripts/: RB_paper_trader.py  README.md  aggregate_candles_batch.py  algo_paper_trader.py  analyze_false_positives.py  analyze_feature_separability.py  analyze_gaps.py  analyze_prediction_quality.py  analyze_small_movers.py  analyze_spike_patterns.py  backfill_features.py  backfill_historical_data.py  backfill_ohlcv.py  backtest_accumulation.py  backtest_algo_strategy.py  backtest_breakout_t1_vs_t2.py  backtest_entry_model.py  backtest_event_classifier.py  backtest_event_classifier_fast.py  backtest_rb_strategy.py  backtest_v1_vs_v2.py  backtest_v3_slow_large.py  backtest_volume_reactive.py  build_elite_movers.py  build_research_db.py  calculate_features_batch.py  calculate_features_batch_v2.py  (+84 more)
(+119 files in other folders)
